--- a/src/css/content.styl
+++ b/src/css/content.styl
@@ -29,6 +29,8 @@ main
         line-height 1.8em
         @media screen and (max-width: 600px)
             width 100%
+            font-size 0.8em
+            line-height 1.6em
     a
         color $gray3
         font-size 0.8em
